Fixed issue where alt text overflowed

--- a/MovieApp/src/app/movie/components/movie/movie.component.css
+++ b/MovieApp/src/app/movie/components/movie/movie.component.css
@@ -18,19 +18,18 @@ img:hover {
 }
 
 img[alt]:after {  
-    display: block;
+    display: flex;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 16px);
+    height: calc(100% - 16px);
+    padding: 8px;
     background-color: #5875ff;
     color: white;
+    font-size: 1em;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    line-height: 450px;
     content: attr(alt);
-}
-
-.movieLink:hover img[alt]:after {
-    line-height: 442px;
 }
